# NationalBankHachathon

./: .dockerignore  .gitignore  README.md  docker-compose.yml  pyrightconfig.json  skills-lock.json
.agents/skills/nb-bias-detector-challenge/: SKILL.md
app/: Dockerfile  main.py  pyproject.toml
app/api/: analysis_service.py  api.py  csv_sanitizer.py  data_service.py  main.py  routes.py  schemas.py  simulation_service.py  state.py
app/mltraining/: test.py  trader_classifier.json  train.py
app/scripts/: check.py  patch.py  test.py
datasets/: aggressive_mix.csv  calm_overtrader_mix.csv  calm_trader.csv  four_way_mix.csv  loss_averse_revenge_mix.csv  loss_averse_trader.csv  loss_calm_combined.csv  overtrader.csv  overtrader_revenge_combined.csv  revenge_trader.csv  triple_mix.csv
datasets/patched/: calm_trader.csv  loss_averse_trader.csv  overtrader.csv  revenge_trader.csv
webapp/: Dockerfile  package-lock.json  package.json  pnpm-lock.yaml
webapp/src/: AnalysisPage.tsx  App.tsx  ColumnMapper.tsx  index.css  types.ts
webapp/src/components/: TradingHeatmap.tsx
webapp/src/lib/: analysis.ts  api.ts  parsers.ts
