[project]
name = "hackathon2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.129.1",
    "numpy>=2.4.2",
    "polars>=1.38.1",
    "python-multipart>=0.0.22",
    "uvicorn>=0.41.0",
    "xgboost>=3.2.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "ruff>=0.15.2",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.14"
typeCheckingMode = "strict"

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["F", "I"]
