[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hackathon2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.129.1",
    "lightgbm>=4.6.0",
    "polars>=1.38.1",
    "pyarrow>=23.0.1",
    "python-multipart>=0.0.26",
    "scikit-learn>=1.8.0",
    "uvicorn>=0.41.0",
    "xgboost>=3.2.0",
]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "ruff>=0.15.2",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
pythonVersion = "3.14"
typeCheckingMode = "strict"

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["F", "I"]

[tool.setuptools.packages.find]
include = ["api*"]
